// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  className="btn px-1 py-0 btn-light active"
  onClick={[Function]}
>
  <i
    className="ta-items-medium"
  />
</button>
`;

exports[`Button sets active class 1`] = `
<button
  className="btn px-1 py-0 btn-light"
  onClick={[Function]}
>
  <i
    className="ta-items-medium"
  />
</button>
`;

exports[`Button sets active class 2`] = `
<button
  className="btn px-1 py-0 btn-light active"
  onClick={[Function]}
>
  <i
    className="ta-items-medium"
  />
</button>
`;

exports[`Button sets icon 1`] = `
<button
  className="btn px-1 py-0 btn-light active"
  onClick={[Function]}
>
  <i
    className="fa fa-circle"
  />
</button>
`;

exports[`Button sets size 1`] = `
<button
  className="btn px-1 py-0 btn-light active"
  onClick={[Function]}
>
  <i
    className="ta-items-medium"
  />
</button>
`;
